--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -20,6 +20,9 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file pom.xml
     - name: push to TAS4K8s
+      env:
+        CF_USERNAME: ${{ secrets.CF_USERNAME }}
+        CF_PASSWORD: ${{ secrets.CF_PASSWORD }}
       run: |
         curl --location "https://cli.run.pivotal.io/stable?release=linux64-binary&source=github" | tar zx
         ./cf api https://api.tas.lab.pasapples.me --skip-ssl-validation
